force-app/main/default/objects/Board_Meeting__c/Board_Meeting__c.object-meta.xml
<CustomObject>
    <label>Board Meeting</label>
    <nameField>
        <label>Meeting Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>