force-app/main/default/objects/Board_Meeting__c/fields/Absent__c.field-meta.xml
<CustomField>
    <fullName>Absent__c</fullName>
    <inlineHelpText>Absent Board Members</inlineHelpText>
    <label>Absent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>