force-app/main/default/objects/Board_Meeting__c/fields/For_Further_Discussion__c.field-meta.xml
<CustomField>
    <fullName>For_Further_Discussion__c</fullName>
    <label>For Further Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>