force-app/main/default/objects/Board_Meeting__c/fields/Meeting_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Transcript__c</fullName>
    <label>Meeting Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>