force-app/main/default/objects/Board_Meeting__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <label>Present</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>