force-app/main/default/objects/Board_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Agenda__c</columns>
    <columns>Present__c</columns>
    <columns>Absent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>